--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -1,12 +1,23 @@
-.banner{
+.banner {
   display: grid;
   gap: 1rem;
 }
 
-.banner img:nth-child(1){
+.banner img:nth-child(1) {
   grid-column: 1/3;
 }
-.banner img:nth-child(4){
+.banner img:nth-child(4) {
   grid-column: 2/3;
   grid-row: 2/4;
+}
+
+@media (min-width: 720px) {
+  .banner img:nth-child(1){
+    grid-row: 1/3;
+    grid-column: 1/3;
+  }
+  .banner img:nth-child(4){
+    grid-row: 1/3;
+    grid-column: 4/4;
+  }
 }
