--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -6,6 +6,12 @@
   column-gap: 20px;
 }
 
+.categorias__lista{
+  display: flex;
+  flex-direction: column;
+  row-gap: .5rem;
+}
+
  @media (min-width: 720px){
   .menu{
     column-gap: 75px;
