--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -1,4 +1,5 @@
-.menu{
+/* Cabeçalho */
+.menu {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -6,37 +7,46 @@
   column-gap: 20px;
 }
 
-.categorias__lista{
+/* Categoria */
+.categorias__lista {
   display: flex;
   flex-direction: column;
-  row-gap: .5rem;
+  row-gap: 0.5rem;
 }
 
- @media (min-width: 720px){
-  .menu{
+@media (min-width: 720px) {
+  /* Cabeçalho */
+  .menu {
     column-gap: 75px;
+  }
+  
+  /* Categoria */
+  .categorias__lista {
+    flex-wrap: wrap;
+    column-gap: 1.5rem;
+    row-gap: 1rem;
   }
 }
 
- @media (min-width: 1440px){
-  .menu{
+@media (min-width: 1440px) {
+  /* Cabeçalho */
+  .menu {
     column-gap: 105px;
     flex-wrap: nowrap;
   }
-  .menu__item:nth-child(1){
+  .menu__item:nth-child(1) {
     order: 1;
   }
-  .menu__item:nth-child(2){
+  .menu__item:nth-child(2) {
     order: 3;
   }
-  .menu__item:nth-child(3){
+  .menu__item:nth-child(3) {
     order: 4;
   }
-  .menu__item:nth-child(4){
+  .menu__item:nth-child(4) {
     order: 5;
   }
-  .menu__item:nth-child(5){
+  .menu__item:nth-child(5) {
     order: 2;
   }
 }
-
