--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -12,6 +12,9 @@
 }
 
 @media (min-width: 720px) {
+  .banner{
+    column-gap: 1.5rem;
+  }
   .banner img:nth-child(1){
     grid-row: 1/3;
     grid-column: 1/3;
