mergulhando no grid

--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -11,6 +11,45 @@
   grid-row: 2/4;
 }
 
+.eventos__item{
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: auto repeat(2, 1fr) auto;
+  grid-template-areas: 
+    "foto foto"
+    "nome nome"
+    "data data"
+    "local btn";
+
+}
+
+.eventos__item img{
+  grid-area: foto;
+}
+
+.eventos__item h3{
+  grid-area: nome;
+}
+
+.eventos__item h4{
+  grid-area: data;
+}
+
+.eventos__item h5{
+  grid-area: local;
+}
+
+.eventos__item button{
+  grid-area: btn;
+}
+
+
+.final{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 @media (min-width: 720px) {
   .banner{
     column-gap: 1.5rem;
