--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -57,6 +57,18 @@
   max-width: 400px;
 }
 
+/* rodape */
+
+.rodape{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.rodape__logo{
+  align-self: flex-end;
+}
+
 @media (min-width: 720px) {
   /* Cabeçalho */
   .menu {
